[package]
name = "ssh-agent-proxy"
version = "0.1.0"
edition = "2024"
description = "A SSH agent proxy to filter available identities"

[lints.rust]
warnings = "deny"
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }

arbitrary_source_item_ordering = "allow"
as_conversions = "allow"
blanket_clippy_restriction_lints = "allow"
implicit_return = "allow"
integer_division_remainder_used = "allow"
min_ident_chars = "allow"
missing_docs_in_private_items = "allow"
mod_module_files = "allow"
pattern_type_mismatch = "allow"
question_mark_used = "allow"
ref_patterns = "allow"
self_named_module_files = "allow"
separated_literal_suffix = "allow"
single_call_fn = "allow"
unseparated_literal_suffix = "allow"

[[bin]]
name = "ssh-agent-proxy"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
ssh-agent-lib = { version = "0.5.2", default-features = false, features = ["codec"] }
sysinfo = "0.38.4"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "net", "io-util", "signal"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
toml = "1.1.2"

[dev-dependencies]
tempfile = "3.27.0"

[profile.release]
overflow-checks = true

[workspace]
